<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dst</groupId>
    <artifactId>java-dst</artifactId>
    <version>0.1-SNAPSHOT</version>


    <properties>
        <slf4j.version>2.0.16</slf4j.version>
        <log4j2.version>2.24.3</log4j2.version>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <ignoredVersions>.*-M.*,.*-alpha.*</ignoredVersions>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.2.0.Final</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.12.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>4.3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.27.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit-junit5</artifactId>
            <version>1.4.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.44.3</version>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <java>
                        <googleJavaFormat/>
                        <trimTrailingWhitespace/>
                        <removeUnusedImports/>
                        <licenseHeader>
                            <file>${project.basedir}/license-header.txt</file>
                        </licenseHeader>
                    </java>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.jacoco</groupId>-->
<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
<!--                <version>0.8.12</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>default-prepare-agent</id>-->
<!--                        <goals><goal>prepare-agent</goal></goals>-->
<!--                    </execution>-->
<!--                    <execution>-->
<!--                        <id>default-report</id>-->
<!--                        <phase>prepare-package</phase>-->
<!--                        <goals>-->
<!--                            <goal>report</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                    <execution>-->
<!--                        <id>default-check</id>-->
<!--                        <goals>-->
<!--                            <goal>check</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <haltOnFailure>false</haltOnFailure>-->
<!--                            <rules>-->
<!--                                <rule>-->
<!--                                    <element>BUNDLE</element>-->
<!--                                    <limits>-->
<!--                                        <limit>-->
<!--                                            <counter>INSTRUCTION</counter>-->
<!--                                            <value>COVEREDRATIO</value>-->
<!--                                            <minimum>0.50</minimum>-->
<!--                                        </limit>-->
<!--                                        <limit>-->
<!--                                            <counter>BRANCH</counter>-->
<!--                                            <value>COVEREDRATIO</value>-->
<!--                                            <minimum>0.50</minimum>-->
<!--                                        </limit>-->
<!--                                        <limit>-->
<!--                                            <counter>COMPLEXITY</counter>-->
<!--                                            <value>COVEREDRATIO</value>-->
<!--                                            <minimum>0.40</minimum>-->
<!--                                        </limit>-->
<!--                                    </limits>-->
<!--                                </rule>-->
<!--                            </rules>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.18.0</version>
                <executions>
                    <execution>
                        <id>update-dependencies</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>use-latest-versions</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <processParent>true</processParent>
                    <generateBackupPoms>false</generateBackupPoms>
                    <ruleSet>
                        <ignoreVersions>
                            <ignoreVersion>
                                <type>regex</type>
                                <version>.+(Alpha|alpha|Beta|beta|BETA|rc|RC|M|Dev)\d*</version>
                            </ignoreVersion>
                        </ignoreVersions>
                    </ruleSet>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                        -Dio.netty.tryReflectionSetAccessible=true
                    </argLine>
                    <systemPropertyVariables>
                        <org.slf4j.simpleLogger.defaultLogLevel>trace</org.slf4j.simpleLogger.defaultLogLevel>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>